ListSorterTest2 with errors, fixable